# fast_gicp_rust

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  README.md
doc/: ARCH.md  CODEGEN.md  DESIGN.md  DESIGN_CODEGEN.md  DEV.md  PLAN.md  PROGRESS.md  README.md
fast-gicp/: Cargo.toml  README.md
fast-gicp-sys/: Cargo.toml  README.md  build.rs
fast-gicp-sys/include/: fast_gicp_wrapper.h  minimal_wrapper.h  wrapper.h
fast-gicp-sys/src/: bridge.rs  lib.rs  minimal_lib.rs  minimal_wrapper.cpp  test.rs  wrapper.cpp
fast-gicp/examples/: basic_registration.rs  cuda_registration.rs
fast-gicp/src/: cuda.rs  error.rs  lib.rs  point_cloud.rs  registration.rs  transform.rs  types.rs
fast-gicp/src/cuda/: fast_vgicp.rs  mod.rs  ndt.rs
fast-gicp/src/fast_vgicp_cuda/: builder.rs  mod.rs
fast-gicp/src/ndt_cuda/: builder.rs  mod.rs
fast-gicp/src/registration/: mod.rs  validation.rs
fast-gicp/src/registration/fast_gicp/: builder.rs  mod.rs
fast-gicp/src/registration/fast_vgicp/: builder.rs  mod.rs
fast-gicp/tests/: cuda_error_handling.rs  enum_validation.rs  integration.rs  ndt_cuda.rs  registration_accuracy.rs
scripts/: generate-bindings.sh  prepare-vendor.sh
