[workspace]
resolver = "2"
members = [
    "fast-gicp-sys",
    "fast-gicp",
]
exclude = [
    "fast_gicp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fast GICP Rust Contributors"]
license = "BSD-3-Clause"
repository = "https://github.com/jerry73204/fast_gicp_rust.git"
description = "Rust wrapper for fast_gicp point cloud registration library"
readme = "README.md"
homepage = "https://github.com/jerry73204/fast_gicp_rust"
documentation = "https://docs.rs/fast-gicp"
keywords = ["robotics", "point-cloud", "registration", "icp", "gicp"]
categories = ["science::robotics", "algorithms", "external-ffi-bindings"]

[workspace.dependencies]
# FFI and build dependencies
cxx = "1.0"
cmake = "0.1"
pkg-config = "0.3"
bindgen = "0.72"


# Error handling
thiserror = "2.0"

# Math libraries
nalgebra = "0.33"

# Testing and benchmarking
criterion = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1
