[package]
name = "fast-gicp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "High-level Rust API for fast_gicp point cloud registration library"
keywords.workspace = true
categories.workspace = true

[features]
default = ["openmp"]
openmp = ["fast-gicp-sys/openmp"]
cuda = ["fast-gicp-sys/cuda"]
bindgen = ["fast-gicp-sys/bindgen"]  # Regenerate bindings
docs-only = ["fast-gicp-sys/docs-only"]  # Documentation-only mode

[dependencies]
fast-gicp-sys = { version = "0.1.0", path = "../fast-gicp-sys" }
cxx = "1.0"
thiserror.workspace = true
nalgebra.workspace = true

[dev-dependencies]
criterion.workspace = true
rand = "0.9"

[[example]]
name = "basic_registration"
required-features = []

[[example]]
name = "cuda_registration"
required-features = ["cuda"]

[package.metadata.docs.rs]
no-default-features = true
features = ["docs-only"]


